--- a/fighttracker-backend/src/main/resources/application.properties
+++ b/fighttracker-backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=fighttracker-backend
+
 # Connessione al DB PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/fighttracker
 spring.datasource.username=postgres
@@ -8,6 +9,12 @@ spring.datasource.password=Impanda17
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Logging
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web.filter=DEBUG
 
+# JWT config
+jwt.secret=LaMiaChiaveSegretaMoltoLungaEComplessa1234567890
+jwt.expirationMs=3600000
+jwt.refreshExpirationMs=86400000
