--- a/fighttracker-backend/src/main/resources/application.properties
+++ b/fighttracker-backend/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.password=Impanda17
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.web.resources.static-locations=file:uploads/
+
 
 # Logging
 logging.level.org.springframework.security=DEBUG
